// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForecastBar should match the snapshow when is expanded is false 1`] = `
<div
  className="ForecastBar"
>
  <div
    className="ForecastBar--bar-container"
  >
    <span
      className="snow small-icon"
    />
    <span
      className="day"
    >
      Sat
    </span>
    <span
      className="bar-container"
    >
      <span
        className="bar"
        style={
          Object {
            "marginLeft": "0%",
            "width": "78.26086956521739%",
          }
        }
      >
        <span
          className="low"
        >
          19
          °
        </span>
        <span
          className="high"
        >
          37
          °
        </span>
      </span>
    </span>
    <button
      className="ForecastBar--button"
      onClick={[Function]}
    >
      +
    </button>
  </div>
</div>
`;

exports[`ForecastBar should match the snapshow when is expanded is true 1`] = `
<div
  className="ForecastBar"
>
  <div
    className="ForecastBar--bar-container"
  >
    <span
      className="snow small-icon"
    />
    <span
      className="day"
    >
      Sat
    </span>
    <span
      className="bar-container"
    >
      <span
        className="bar"
        style={
          Object {
            "marginLeft": "0%",
            "width": "78.26086956521739%",
          }
        }
      >
        <span
          className="low"
        >
          19
          °
        </span>
        <span
          className="high"
        >
          37
          °
        </span>
      </span>
    </span>
    <button
      className="ForecastBar--button"
      onClick={[Function]}
    >
      --
    </button>
  </div>
  <article
    className="article article--expanded"
  >
    <header
      className="article--header"
    >
      <h2
        className="article--h2"
      >
        <div
          className="snow"
        />
        Snow (&lt; 1 in.) until afternoon.
      </h2>
      <span>
        Chance of 
        snow
        : 
        51%
      </span>
    </header>
    <div
      className="article--div"
    >
      <p
        className="p"
      >
        Low: 
        19
        °
      </p>
      <p
        className="p"
      >
        Sunrise: 
        6:56 AM
      </p>
      <p
        className="p"
      >
        Wind: 
        3 mph WNW
      </p>
      <p
        className="p"
      >
        High: 
        37
        °
      </p>
      <p
        className="p"
      >
        Sunset: 
        5:17 PM
      </p>
      <p
        className="p"
      >
        Humidity: 
        66%
      </p>
    </div>
  </article>
</div>
`;
